--- a/packages/globalization/package.json
+++ b/packages/globalization/package.json
@@ -24,11 +24,37 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@carnil/core": "workspace:*",
+    "@carnil/core": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0"
+  },
+  "keywords": [
+    "payments",
+    "globalization",
+    "multi-currency",
+    "localization",
+    "sdk",
+    "typescript"
+  ],
+  "author": {
+    "name": "Carnil Team",
+    "email": "hello@carnil.com",
+    "url": "https://carnil.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carnil/carnil-sdk.git",
+    "directory": "packages/globalization"
+  },
+  "bugs": {
+    "url": "https://github.com/carnil/carnil-sdk/issues"
+  },
+  "homepage": "https://carnil.com",
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
