--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -24,7 +24,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@carnil/core": "workspace:*",
+    "@carnil/core": "^0.1.0",
     "next": "^14.0.0"
   },
   "keywords": [
