--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -24,7 +24,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@carnil/core": "workspace:*",
+    "@carnil/core": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "axios": "^1.6.0",
@@ -32,6 +32,31 @@
     "jsonwebtoken": "^9.0.2",
     "bull": "^4.12.0",
     "ioredis": "^5.3.0"
+  },
+  "keywords": [
+    "payments",
+    "webhooks",
+    "events",
+    "sdk",
+    "typescript"
+  ],
+  "author": {
+    "name": "Carnil Team",
+    "email": "hello@carnil.com",
+    "url": "https://carnil.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carnil/carnil-sdk.git",
+    "directory": "packages/webhooks"
+  },
+  "bugs": {
+    "url": "https://github.com/carnil/carnil-sdk/issues"
+  },
+  "homepage": "https://carnil.com",
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
