--- a/packages/stripe/package.json
+++ b/packages/stripe/package.json
@@ -35,19 +35,19 @@
   ],
   "author": {
     "name": "Carnil Team",
-    "email": "hello@carnil.com",
-    "url": "https://carnil.com"
+    "email": "hello@carnil.dev",
+    "url": "https://carnil.dev"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/carnil/carnil-sdk.git",
+    "url": "https://github.com/Carnil-Dev/carnil-sdk.git",
     "directory": "packages/stripe"
   },
   "bugs": {
-    "url": "https://github.com/carnil/carnil-sdk/issues"
+    "url": "https://github.com/Carnil-Dev/carnil-sdk/issues"
   },
-  "homepage": "https://carnil.com",
+  "homepage": "https://carnil.dev",
   "publishConfig": {
     "access": "public"
   },
