Refactor package.json files to update author information, repository URLs, and homepage links to the new domain; enhance documentation in README.md and QUICK_START.md; modify build scripts for improved clarity.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carnil-payments-sdk",
+  "name": "@carnil/carnil-payments-sdk",
   "version": "0.1.0",
   "description": "A unified payments SDK for Stripe, Razorpay, and other payment providers",
   "private": false,
@@ -60,15 +60,11 @@
     "subscriptions",
     "webhooks"
   ],
-  "author": {
-    "name": "Carnil Team",
-    "email": "hello@carnil.dev",
-    "url": "https://carnil.dev"
-  },
+  "author": "Carnil Team <hello@carnil.dev> (https://carnil.dev)",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Carnil-Dev/carnil-sdk.git"
+    "url": "git+https://github.com/Carnil-Dev/carnil-sdk.git"
   },
   "bugs": {
     "url": "https://github.com/Carnil-Dev/carnil-sdk/issues"
@@ -81,5 +77,10 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "main": ".eslintrc.js",
+  "directories": {
+    "doc": "docs",
+    "example": "examples"
   }
 }
