--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -24,7 +24,9 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@carnil/core": "^0.1.0"
+    "@carnil/core": "^0.1.0",
+    "express": "^4.18.2",
+    "hono": "^3.12.0"
   },
   "keywords": [
     "payments",
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/express": "^4.17.21",
     "tsup": "^7.2.0",
     "typescript": "^5.3.0",
     "vitest": "^1.0.0"
