--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -27,7 +27,8 @@
     "@carnil/core": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "zod": "^3.22.0"
   },
   "keywords": [
     "payments",
