--- a/packages/compliance/package.json
+++ b/packages/compliance/package.json
@@ -32,7 +32,9 @@
     "react-dom": "^18.2.0",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "zod": "^3.22.0",
+    "lucide-react": "^0.263.0"
   },
   "keywords": [
     "payments",
