--- a/packages/globalization/package.json
+++ b/packages/globalization/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0"
+    "date-fns-tz": "^2.0.0",
+    "zod": "^3.22.0"
   },
   "keywords": [
     "payments",
