--- a/packages/pricing-editor/package.json
+++ b/packages/pricing-editor/package.json
@@ -33,7 +33,8 @@
     "lucide-react": "^0.294.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.0"
   },
   "keywords": [
     "payments",
