--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -31,7 +31,8 @@
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "bull": "^4.12.0",
-    "ioredis": "^5.3.0"
+    "ioredis": "^5.3.0",
+    "zod": "^3.22.0"
   },
   "keywords": [
     "payments",
