Update test scripts in package.json files across multiple packages to use 'vitest run --passWithNoTests' for improved test handling; modify GitHub Actions workflow to run tests only if present.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm run build
 
       - name: Run tests
-        run: pnpm run test
+        run: pnpm run test --if-present
 
       - name: Create or Publish Release
         uses: changesets/action@v1
