--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm run build
 
       - name: Run tests
-        run: pnpm run test --if-present
+        run: pnpm run test
 
       - name: Create or Publish Release
         uses: changesets/action@v1
