--- a/package.json
+++ b/package.json
@@ -75,7 +75,11 @@
     "lint": "eslint src --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "pnpm build",
+    "release": "pnpm build && pnpm publish",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish": "pnpm build && changeset publish --provenance"
   },
   "dependencies": {
     "zod": "^3.22.4",
@@ -95,6 +99,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
