--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -4,7 +4,7 @@
   "description": "React example for Carnil SDK",
   "private": true,
   "dependencies": {
-    "@carnil/": "^0.1.0",
+    "@carnil": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
