refactor: rename package to @carnil/sdk and update all references
- Changed package name from @carnil to @carnil/sdk in package.json
- Updated installation instructions in README
- Adjusted import paths in examples and documentation to reflect new package name
- Ensured consistency across all example projects and scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carnil",
+  "name": "@carnil/sdk",
   "version": "0.1.1",
   "description": "A unified payments SDK for Stripe, Razorpay, and other payment providers",
   "private": false,
