--- a/examples/basic-usage/package.json
+++ b/examples/basic-usage/package.json
@@ -8,7 +8,7 @@
     "dev": "node index.js"
   },
   "dependencies": {
-    "@carnil": "^0.1.0"
+    "@carnil/sdk": "^0.1.0"
   },
   "keywords": [
     "carnil",
