refactor: rename package to @carnil/carnil-payments-sdk and update all references
- Changed package name from @carnil/sdk to @carnil/carnil-payments-sdk in package.json
- Updated installation instructions and features in README
- Adjusted import paths in examples and documentation to reflect new package name
- Enhanced build and publish scripts for better package management
- Updated TypeScript paths for improved module resolution
- Cleaned up pnpm-lock.yaml and pnpm-workspace.yaml for consistency

--- a/examples/nextjs-app/package.json
+++ b/examples/nextjs-app/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@carnil/sdk": "^0.1.0",
+    "@carnil/core": "workspace:*",
+    "@carnil/stripe": "workspace:*",
+    "@carnil/razorpay": "workspace:*",
+    "@carnil/react": "workspace:*",
+    "@carnil/next": "workspace:*",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
