--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -4,7 +4,9 @@
   "description": "React example for Carnil SDK",
   "private": true,
   "dependencies": {
-    "@carnil/sdk": "^0.1.0",
+    "@carnil/core": "^0.1.0",
+    "@carnil/stripe": "^0.1.0",
+    "@carnil/react": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
