--- a/examples/saas-dashboard/package.json
+++ b/examples/saas-dashboard/package.json
@@ -10,7 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@carnil/sdk": "^0.1.0",
+    "@carnil/core": "workspace:*",
+    "@carnil/stripe": "workspace:*",
+    "@carnil/razorpay": "workspace:*",
+    "@carnil/react": "workspace:*",
+    "@carnil/next": "workspace:*",
+    "@carnil/analytics": "workspace:*",
+    "@carnil/compliance": "workspace:*",
+    "@carnil/globalization": "workspace:*",
+    "@carnil/pricing-editor": "workspace:*",
+    "@carnil/webhooks": "workspace:*",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
