refactor: update build and script commands in package.json and turbo.json
- Changed development and testing scripts to use tsup and vitest for improved performance.
- Simplified build and publish commands to use npm instead of turbo.
- Cleaned up turbo.json by removing unnecessary dependencies and outputs for tasks.

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "private": false,
   "scripts": {
     "build": "tsup",
-    "dev": "turbo run dev",
-    "test": "turbo run test",
-    "lint": "turbo run lint",
-    "type-check": "turbo run type-check",
-    "clean": "turbo run clean",
+    "dev": "tsup --watch",
+    "test": "vitest",
+    "lint": "eslint src --ext .ts,.tsx",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish --provenance",
-    "prepublishOnly": "turbo run build",
+    "release": "npm run build && changeset publish --provenance",
+    "prepublishOnly": "npm run build",
     "publish:all": "node scripts/build-and-publish.js publish-all",
     "publish:core": "node scripts/build-and-publish.js publish core",
     "publish:stripe": "node scripts/build-and-publish.js publish stripe",
